@@ -1,3 +1,6 @@
+2004-09-12	blytkerchan
+	* membar.h: new file
+
 2004-09-01	blytkerchan
 	* swap.h: new file
 
